src/Components/CareerTimeline.css
.career-timeline-page-container {
    display: flex;
    justify-content: center;
    width: 100%;
    margin: 0 auto;
    flex-direction: column;
}

.career-timeline-button-container {
    display: flex;
    flex-direction: row;
}

.career-timeline-button-container button {
    all: unset;
    color: white !important;
    background-color: #2c2c2c;
    border: none;
    padding: 10px;
    margin: 0 5px;
    cursor: pointer;
    width: 100%;
    font-size: 16px;
    text-align: center;
}

.career-timeline-button-container button:hover {
    background-color: #3a3b3c;
}

.career-timeline-button-container button.active {
    background-color: #3a3b3c;
    font-weight: bold;
}

.content {
    flex: 1;
}

.content h2 {
    margin: 10px 0 0;
}

.content-dates {
    margin: 0;
    font-size: 16px;
}

ul {
    position: relative;
    list-style: none;
}

.work-experience-list {
    margin-bottom: 5px;
}

.work-experience-list::before {
    content: '▶';
    position: absolute;
    left: 0;
    margin-right: 5px;
}

